--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -7,9 +7,7 @@
 [class*='col-']:last-of-type {
   padding-right: 0;
 }
-a {
-  text-decoration: none;
-}
+
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -18,16 +16,14 @@ a {
 h3 {
   text-align: center; margin-bottom: 0;
 }
-h4 {
-  position: relative;
-}
+
 .grid {
   margin: 0;
 }
 .col-1-4 {
   width: 25%;
 }
-.module {
+/* .module {
   padding: 20px;
   text-align: center;
   color: #eee;
@@ -40,23 +36,23 @@ h4 {
   background-color: #EEE;
   cursor: pointer;
   color: #607d8b;
-}
+} */
 .grid-pad {
   padding: 10px 0;
 }
 .grid-pad > [class*='col-']:last-of-type {
   padding-right: 20px;
 }
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .module {
     font-size: 10px;
     max-height: 75px; }
-}
+} */
 @media (max-width: 1024px) {
   .grid {
     margin: 0;
   }
-  .module {
+/*   .module {
     min-width: 60px;
-  }
+  } */
 }
