--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,16 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let hero of heroes" class="col-1-4"
+  <div *ngFor="let hero of heroes" class="col-1-4">
+    <app-block-link [hero]="hero"></app-block-link>
+  </div>
+<!--   <a *ngFor="let hero of heroes" class="col-1-4"
       routerLink="/detail/{{hero.id}}">
     <div class="module hero">
       <h4>{{hero.name}}</h4>
       <p>Power: {{hero.strength | strength}}
     </div>
-  </a>
+  </a> -->
 </div>
-
+<app-interest-picker (interestChanged)="setInterest($event)"></app-interest-picker>
+{{interest}}
 <app-hero-search></app-hero-search>
