--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -15,3 +15,7 @@
     <app-hero [hero]="hero" (delete)="delete(hero)"></app-hero>
   </li>
 </ul>
+
+<div class="alert alert-info" *ngIf="noDataFound">
+    No heroes were found.
+</div>
